fix: confirm modal alignment and button margins

--- a/src/confirm-modal/confirm-modal.module.css
+++ b/src/confirm-modal/confirm-modal.module.css
@@ -12,14 +12,21 @@
 	padding: 50px;
 	padding-top: 170px;
 	text-align: center;
-
-	justify-content: center;
+	align-items: center;
 	display: flex;
 	flex-direction: column;
 }
 
-.title {
-	margin-bottom: 100px;
+.buttons {
+	margin-top: 100px;
+}
+
+.buttons button {
+	margin-right: 15px;
+}
+
+.buttons button:last-child {
+	margin-right: 0px;
 }
 
 .confirm-modal.action {
